<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewBasicActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText01"
        android:onClick="trueBtn01Click"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:gravity="center"
        android:textSize="@dimen/txSize"
        android:textColor="@color/colorText"
        android:background="@color/colorTv"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText02"
        android:onClick="falseBtn02Click"/>



    <Button
        android:id="@+id/trueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText01"/>

    <TextView
        android:id="@+id/tv02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:gravity="center"
        android:textSize="@dimen/txSize"
        android:textColor="@color/colorText"
        android:background="@color/colorTv"/>

    <Button
        android:id="@+id/falseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText02"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Button01"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Button02"/>
    </LinearLayout>

    <include layout="@layout/sub_layout"/>

</LinearLayout>